Update and rename post2.md to 2024-07-14-blog-post-2.md

--- a/_posts/2024-07-14-blog-post-2.md
+++ b/_posts/2024-07-14-blog-post-2.md
@@ -1,5 +1,5 @@
 ---
-title: '2. Numpy & Pandas'
+title: 'Numpy & Pandas'
 date: 2024-07-14
 # permalink: /posts/2014/08/blog-post-3/
 siteurl: "https://ssunrla16.notion.site/2-Numpy-Pandas-29b1d52f0c414a99bfc32b75e7fff055?pvs=4"
